; ModuleID = '/home/carl/AnghaBench/numpy/numpy/f2py/src/test/extr_foomodule.c_foo_bar.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/f2py/src/test/extr_foomodule.c_foo_bar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@foo_bar.capi_kwlist = internal global [1 x i8*] zeroinitializer, align 8
@.str = private unnamed_addr constant [10 x i8] c"|:foo.bar\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*, void (...)*)* @foo_bar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @foo_bar(i32* %0, i32* %1, i32* %2, void (...)* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca void (...)*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store void (...)* %3, void (...)** %8, align 8
  store i32* null, i32** %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = call i32 @PyArg_ParseTupleAndKeywords(i32* %10, i32* %11, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** getelementptr inbounds ([1 x i8*], [1 x i8*]* @foo_bar.capi_kwlist, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %4
  br label %18

15:                                               ; preds = %4
  %16 = load void (...)*, void (...)** %8, align 8
  call void (...) %16()
  %17 = call i32* @Py_BuildValue(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  store i32* %17, i32** %9, align 8
  br label %18

18:                                               ; preds = %15, %14
  %19 = load i32*, i32** %9, align 8
  ret i32* %19
}

declare dso_local i32 @PyArg_ParseTupleAndKeywords(i32*, i32*, i8*, i8**) #1

declare dso_local i32* @Py_BuildValue(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
